# cmake_demo

./: README.md
d1/: CMakeLists.txt  main.c
d2/: CMakeLists.txt
d2/src/: CMakeLists.txt
d3/lib/: CMakeLists.txt  hello.c  hello.h
d4/: CMakeLists.txt
d4/include/: example01.h  example02.h  hello.h
d4/src/: CMakeLists.txt  example01.c  example02.c  hello.c
